data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_508.wast
;; 9. **Test Description:**    - Form a test case where a loop contains a nested `if` block that uses `br` to break out of both the `if` block and the loop. Introduce a type mismatch in the operands required by the `if` block.    - **Constraint Checking:** Verifies the handling of type checking within nested `if` blocks and loops.    - **Relation to Infinite Loops:** If the `if` block's `br` fails to execute correctly, the loop may continue indefinitely.

(assert_invalid
  (module
    (func $nested_loop_if_type_mismatch
      (loop (param i32)
        (if (param i32) (i32.const 1)
          (br 1 (i64.const 2))
        )
      )
    )
  )
  "type mismatch"
)